<resources>
    <string name="app_name">Trakr</string>
    <string name="get_started">Get started</string>
    <string name="login">Login</string>
    <string name="app_version">Version 0.1</string>
    <string name="about">About</string>
    <string name="licenses">Licenses</string>
    <string name="welcome_graphic_description">an graphic of cubes</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="done">Done</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="your_day">Your day</string>
    <string name="history_icon">history icon</string>
    <string name="new_time_entry">New entry</string>
    <string name="settings_icon">settings icon</string>
    <string name="help_icon">help icon</string>
    <string name="back_icon">back icon</string>
    <string name="settings">Settings</string>
    <string name="profile_photo">profile photo</string>
    <string name="preferences">Preferences</string>
    <string name="dark_mode">Dark mode</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete account</string>
    <string name="about_trakr">About trakr</string>
    <string name="task_types">Task types</string>
    <string name="privacy">Privacy</string>
    <string name="notifications">Notifications</string>
    <string name="stop_icon">stop icon</string>
    <string name="pause_icon">pause icon</string>
    <string name="edit_icon">edit icon</string>
    <string name="close_icon">close icon</string>
    <string name="swipe_to_change_color">Swipe to change color</string>
    <string name="about_text">Sagittis at leo habitant sed augue. Mollis in sit viverra nibh in. Tincidunt pharetra, scelerisque eleifend a vel velit neque cursus bibendum. Neque viverra nibh risus eget sed quis. Fermentum amet, faucibus nulla odio et. Aliquet tellus lacus, gravida commodo. Dui faucibus fames mauris, magna. Viverra tempus amet sem feugiat. Risus ut dictum lectus accumsan iaculis turpis. Aliquam gravida a amet diam. Nunc cursus arcu scelerisque praesent vitae.\n\nHac egestas id metus sed iaculis eget enim, at. Ultrices diam dignissim porttitor tortor purus diam phasellus nisi consequat. Dictum cursus mollis feugiat id. Facilisis placerat diam, tristique tortor sed elementum velit pretium.</string>
    <string name="by_jia_jie">By Jia Jie</string>
    <string name="loading">Loading</string>
    <string name="colors">Colors</string>
    <string name="change_password">Change password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="confirm">Confirm</string>
    <string name="placeholder_avatar_icon">placeholder avatar icon</string>
    <string name="history">History</string>
    <string name="search_icon">search icon</string>
    <string name="what_re_you_doing_now">What\'re you doing now?</string>
    <string name="finish_icon">finish icon</string>
    <string name="delete_icon">delete icon</string>
    <string name="backup_data">Backup data</string>
    <string name="start_tracking_your_time_by_adding_a_time_entry">Start tracking your time by adding a time entry</string>
    <string name="analytics">Analytics</string>
    <string name="edit_entry">Edit entry</string>
    <string name="play_icon">play icon</string>
    <string name="how_you_spent_your_day">How you spent your day</string>
    <string name="add_more_time_entries_so_we_can_calculate_your_stats">Add more time entries so we can calculate your stats</string>
    <string name="past_time_entries_will_appear_here">Past time entries will appear here.</string>
    <string name="woman_adding_an_entry_to_a_list">woman adding an entry to a list</string>
    <string name="woman_sitting_on_a_clock">woman sitting on a clock</string>
    <string name="man_looking_at_charts">man looking at charts</string>
    <string name="most_time_spent">Most time spent</string>
    <string name="analytics_icon">analytics icon</string>
    <string name="_1_week">1 week</string>
    <string name="recorded">recorded</string>
    <string name="add_icon">add icon</string>
    <string name="update">Update</string>
    <string name="your_time_entry_s_title">Your time entry\'s title</string>
</resources>