<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".ui.WelcomeFragment">

        <com.example.trakr.ui.customviews.CurrentDateTextView
            android:id="@+id/current_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:letterSpacing="0.1"
            android:textAllCaps="true"
            android:textColor="@color/text2"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:letterSpacing="0.1"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_marginBottom="80dp"
            android:contentDescription="@string/welcome_graphic_description"
            android:scaleType="centerCrop"
            android:src="@drawable/welcome_graphic" />

        <TextView
            android:id="@+id/get_started_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/btn_bg"
            android:clickable="true"
            android:fontFamily="@font/avenir_heavy"
            android:gravity="center"
            android:letterSpacing="0.1"
            android:text="@string/get_started"
            android:textAllCaps="true"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:fontFamily="@font/avenir_heavy"
            android:letterSpacing="0.1"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/text_btn_color" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/avenir_medium"
                android:text="@string/app_version"
                android:textColor="@color/text3"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/about_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/avenir_medium"
                android:text="@string/about"
                android:textColor="@color/text3"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/licenses_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/avenir_medium"
                android:text="@string/licenses"
                android:textColor="@color/text3"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>
</layout>