<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="fragment"
            type="com.example.trakr.ui.SettingsFragment" />

        <variable
            name="user"
            type="com.example.trakr.models.User" />

        <variable
            name="darkMode"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.SettingsFragment">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:contentDescription="@string/back_icon"
            android:onClick="@{() -> fragment.back()}"
            android:src="@drawable/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_btn_color" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/help_icon"
            android:onClick="@{() -> fragment.goToAbout()}"
            android:src="@drawable/help"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_btn_color" />

        <com.example.trakr.ui.customviews.CurrentDateTextView
            android:id="@+id/current_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:letterSpacing="0.1"
            android:textAllCaps="true"
            android:textColor="@color/text2"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:letterSpacing="0.1"
            android:text="@string/settings"
            android:textAllCaps="true"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_date_text" />

        <include
            android:id="@+id/edit_profile_container"
            layout="@layout/view_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="40dp"
            app:fragment="@{fragment}"
            app:layout_constraintTop_toBottomOf="@id/title_text"
            app:user="@{user}" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/prefs_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/card_bg"
            android:backgroundTint="@color/primary"
            android:paddingStart="30dp"
            android:paddingTop="24dp"
            android:paddingEnd="30dp"
            android:paddingBottom="24dp"
            app:layout_constraintTop_toBottomOf="@id/edit_profile_container">

            <TextView
                android:id="@+id/prefs_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:letterSpacing="0.1"
                android:text="@string/preferences"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dark_mode_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/avenir_medium"
                android:text="@string/dark_mode"
                android:textColor="#fff"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/prefs_text" />

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:clickable="true"
                android:contentDescription='@{darkMode ? "enabled icon" : "disabled icon"}'
                android:onClick="@{() -> fragment.toggleDarkMode()}"
                android:src="@{darkMode ? @drawable/check : @drawable/close}"
                app:layout_constraintBottom_toBottomOf="@id/dark_mode_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/dark_mode_text"
                tools:src="@drawable/close" />

            <TextView
                android:id="@+id/change_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_medium"
                android:onClick="@{() -> fragment.goToChangePassword()}"
                android:text="@string/change_password"
                android:textColor="#fff"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dark_mode_text" />

            <TextView
                android:id="@+id/privacy_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_medium"
                android:text="@string/privacy"
                android:textColor="#fff"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/change_password_text" />

            <TextView
                android:id="@+id/colors_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/avenir_medium"
                android:text="@string/colors"
                android:textColor="#fff"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/privacy_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="42dp"
            android:fontFamily="@font/avenir_medium"
            android:onClick="@{() -> fragment.logout()}"
            android:text="@string/logout"
            android:textColor="@color/red"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prefs_container" />

        <TextView
            android:id="@+id/delete_account_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/avenir_medium"
            android:onClick="@{() -> fragment.deleteAccount()}"
            android:text="@string/delete_account"
            android:textColor="@color/red"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logout_btn" />

        <TextView
            android:id="@+id/about_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/avenir_heavy"
            android:onClick="@{() -> fragment.goToAbout()}"
            android:text="@string/about_trakr"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delete_account_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>