<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="java.time.LocalDateTime" />

        <import type="java.time.format.DateTimeFormatter" />

        <variable
            name="fragment"
            type="com.example.trakr.ui.fragments.EditTimeEntryFragment" />

        <variable
            name="timeEntry"
            type="com.example.trakr.models.TimeEntry" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.EditTimeEntryFragment">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/color_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:background="@color/primary" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp">

            <ImageView
                android:id="@+id/close_btn"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:clickable="true"
                android:contentDescription="@string/close_icon"
                android:onClick="@{() -> fragment.back()}"
                android:src="@drawable/close"
                app:layout_constraintBottom_toBottomOf="@id/delete_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/delete_btn" />

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:letterSpacing="0.1"
                android:text="@string/edit_entry"
                android:textAllCaps="true"
                android:textColor="#FFF"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/delete_btn"
                app:layout_constraintStart_toEndOf="@id/close_btn"
                app:layout_constraintTop_toTopOf="@id/delete_btn" />

            <ImageView
                android:id="@+id/delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_icon_btn_bg"
                android:clickable="true"
                android:contentDescription="@string/delete_icon"
                android:onClick="@{() -> fragment.deleteTimeEntry()}"
                android:src="@drawable/delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="#FFF" />

            <EditText
                android:id="@+id/time_entry_title_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@null"
                android:fontFamily="@font/avenir_medium"
                android:hint="@string/what_re_you_doing_now"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:text="@{timeEntry.title}"
                android:textColor="#FFF"
                android:textColorHint="#66FFFFFF"
                android:textCursorDrawable="@null"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/title_text"
                tools:text="Implementing the backend for simple-forum" />

            <TextView
                android:id="@+id/change_color_text"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:alpha="0.3"
                android:letterSpacing="0.1"
                android:text="@string/swipe_to_change_color"
                android:textAllCaps="true"
                android:textColor="#FFF"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/done_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/done_btn" />

            <TextView
                android:id="@+id/done_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/outline_btn_bg"
                android:clickable="true"
                android:drawablePadding="10dp"
                android:fontFamily="@font/avenir_heavy"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:onClick="@{() -> fragment.done()}"
                android:text="@string/done"
                android:textAllCaps="true"
                android:textColor="@color/outline_btn_text_color"
                app:drawableEndCompat="@drawable/forward"
                app:drawableTint="@color/outline_btn_text_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</layout>